--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
 <meta charset="utf-8">
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" ></script>
 <style>
-* {
-  box-sizing: border-box;
-}
 * {box-sizing: border-box;}
 
 body {
@@ -174,9 +171,83 @@ hr {
 
 /* Change styles for cancel button and signup button on extra small screens */
 @media screen and (max-width: 300px) {
+  span.psw {
+     display: block;
+     float: none;
+  }
   .cancelbtn, .signupbtn {
      width: 100%;
   }
+}
+/* The Modal (background) */
+.modal2 {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  padding-top: 60px;
+}
+
+/* Modal Content/Box */
+.modal2-content {
+  background-color: #fefefe;
+  margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+.animate {
+  -webkit-animation: animatezoom 0.6s;
+  animation: animatezoom 0.6s
+}
+
+@-webkit-keyframes animatezoom {
+  from {-webkit-transform: scale(0)} 
+  to {-webkit-transform: scale(1)}
+}
+  
+@keyframes animatezoom {
+  from {transform: scale(0)} 
+  to {transform: scale(1)}
+}
+.imgcontainer {
+  text-align: center;
+  margin: 24px 0 12px 0;
+  position: relative;
+}
+
+img.avatar {
+  width: 40%;
+  border-radius: 50%;
+}
+span.psw {
+  float: right;
+  padding-top: 16px;
+}
+/* The Close Button (x) */
+.close2 {
+  position: absolute;
+  right: 25px;
+  top: 0;
+  color: #000;
+  font-size: 35px;
+  font-weight: bold;
+}
+.close2:hover,
+.close2:focus {
+  color: red;
+  cursor: pointer;
+}
+/* Extra styles for the cancel button */
+.cancelbtn2 {
+  width: auto;
+  padding: 10px 18px;
+  background-color: #f44336;
 }
 </style>
 </head>
@@ -194,7 +265,7 @@ Quick like Hermes
 
 <div class="split centered">
    <button class="from_top" onclick="document.getElementById('id01').style.display='block'">Sign Up</button>
-   <button onclick="document.getElementById('id01').style.display='block'">Sign In</button>
+   <button onclick="document.getElementById('id02').style.display='block'">Sign In</button>
    <div id="id01" class="modal">
   <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
   <form class="modal-content" action="sign_up.php" method = "POST" onsubmit="return myFunction()">
@@ -202,13 +273,13 @@ Quick like Hermes
       <h1>Sign Up</h1>
       <p>Please fill in this form to create an account.</p>
       <hr>
-      <label for="u_name"><b>Username</b><span id="user-availability-status"></span></label>
+      <label for="u_name"><b>Username</b>&nbsp;&nbsp;&nbsp;&nbsp;<span id="user-availability-status"></span></label>
       <input type="text" placeholder="Enter Username" name="u_name" id="u_name" onblur="check_username();" required>
 
       <label for="u_psw"><b>Password</b></label>
       <input type="password" placeholder="Enter Password" name="u_psw" id="u_psw" onkeyup='check();' required>
 
-      <label for="psw-repeat"><b>Repeat Password</b> <span id='message'></span> </label>
+      <label for="psw-repeat"><b>Repeat Password</b>&nbsp;&nbsp;&nbsp;&nbsp; <span id='message'></span> </label>
       <input type="password" placeholder="Repeat Password" name="psw-repeat" id="psw-repeat" onkeyup='check();' required>
       
       <label for="f_name"><b>Full Name</b></label>
@@ -234,14 +305,43 @@ Quick like Hermes
     </div>
   </form>
 </div>
+<div id="id02" class="modal2">
+  
+  <form class="modal2-content animate" action="/action_page.php" method="post">
+    <div class="imgcontainer">
+      <span onclick="document.getElementById('id02').style.display='none'" class="close2" title="Close Modal">&times;</span>
+      <img src="img_avatar2.png" alt="Avatar" class="avatar">
+    </div>
 
+    <div class="container">
+      <label for="uname"><b>Username</b></label>
+      <input type="text" placeholder="Enter Username" name="uname" required>
+
+      <label for="psw"><b>Password</b></label>
+      <input type="password" placeholder="Enter Password" name="psw" required>
+        
+      <button type="submit">Login</button>
+      <label>
+        <input type="checkbox" checked="checked" name="remember"> Remember me
+      </label>
+    </div>
+
+    <div class="container" style="background-color:#f1f1f1">
+      <button type="button" onclick="document.getElementById('id02').style.display='none'" class="cancelbtn2">Cancel</button>
+      <span class="psw">Forgot <a href="#">password?</a></span>
+    </div>
+  </form>
+</div>
 <script>
 // Get the modal
 var modal = document.getElementById('id01');
-
+var modal2 = document.getElementById('id02');
 // When the user clicks anywhere outside of the modal, close it
 window.onclick = function(event) {
   if (event.target == modal) {
+    modal.style.display = "none";
+  }
+  if (event.target == modal2) {
     modal.style.display = "none";
   }
 }
@@ -250,10 +350,10 @@ window.onclick = function(event) {
       if (document.getElementById('u_psw').value ==
           document.getElementById('psw-repeat').value) {
           document.getElementById('message').style.color = 'green';
-          document.getElementById('message').innerHTML = 'matching';
+          document.getElementById('message').innerHTML = 'Matching';
       } else {
-      		document.getElementById('message').style.color = 'red';
-          document.getElementById('message').innerHTML = 'not matching';
+      	  document.getElementById('message').style.color = 'red';
+          document.getElementById('message').innerHTML = 'Not Matching';
       }
   }
   
@@ -266,24 +366,19 @@ window.onclick = function(event) {
 	      return true;
 	  }
  }
- var check_username = function() {
-     var username = document.getElementById('u_name').value;
-     alert("The username is: " + username);
-     document.getElementById('user-availability-status').style.color = 'green';
-     document.getElementById('user-availability-status').innerHTML = username;
-	 $(document).ready(function(){
-//		$.ajax({
-//             url: 'check_username.php',
-//             type: 'POST',
-//             data: { u_name : document.getElementById('u_name').value },
-//             success: function(output){
-//									 document.getElementById('user-availability-status').style.color = 'green';
-//									 document.getElementById('user-availability-status').innerHTML = 'Available'; }
-//			 error: function(output){
-//									 document.getElementById('user-availability-status').style.color = 'red';
-//									 document.getElementById('user-availability-status').innerHTML = 'Used'; }
-//         });
-//
+ var check_username = function() {     
+     $.post('check_username.php',{u_name: $("#u_name").val()}, function(data)
+     {
+         if (data == 'TRUE')
+             {
+                 document.getElementById('user-availability-status').style.color = 'green';
+                 document.getElementById('user-availability-status').innerHTML = 'Available';
+             }
+         else
+             {
+                 document.getElementById('user-availability-status').style.color = 'red';
+                 document.getElementById('user-availability-status').innerHTML = 'Not Available';
+             }
      });
   }
 </script>
